logs/validate.20260408-025740.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTBBAlphaStEph.rs:341:29
    |
341 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `BSTBBAlphaStEph` in this scope
   --> src/Chap37/BSTBBAlphaStEph.rs:829:50
    |
829 |     impl<T: std::fmt::Debug> std::fmt::Debug for BSTBBAlphaStEph<T> {
    |                                                  ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTBBAlphaStEph` in this scope
   --> src/Chap37/BSTBBAlphaStEph.rs:837:72
    |
837 |     impl<T: std::fmt::Debug + std::fmt::Display> std::fmt::Display for BSTBBAlphaStEph<T> {
    |                                                                        ^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 4279MB, peak z3 RSS: 231MB, min free: 22184MB
Sampled CPU Usage: rust_verify: 40s, z3 children: 0s
